fix: 예외 메세지 null 처리 추가